[package]
name = "summertoolbox"
version = "0.1.0"
description = "A personal toolbox application"
authors = ["you"]
edition = "2021"

[lib]
name = "summertoolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "summertoolbox"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"  # 提供 shell-open 功能
urlencoding = "2.1.3"
base64 = "0.21.5"
# 图像处理依赖
image = "0.24.7"
imageproc = "0.23.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

